Add new styling and removs BS in favor of tailwind

--- a/.gitignore
+++ b/.gitignore
@@ -123,5 +123,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
 /.idea/
 /credentials/
+workspace_nordism.code-workspace
+.vscode/launch.json
+.vscode/settings.json
+
+*node_modules*
